--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
         <link rel="stylesheet" href="style/share.css" />
         <link rel="stylesheet" href="style/editor.css" />
         <link rel="stylesheet" href="style/prompts.css" />
-        <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
-        <link rel="stylesheet" href="codemirror/addon/hint/show-hint.css" />
+        <link rel="stylesheet" href="script/codemirror/lib/codemirror.css" />
+        <link rel="stylesheet" href="script/codemirror/addon/hint/show-hint.css" />
 
-        <script src="codemirror/lib/codemirror.js"></script>
-        <script src="codemirror/keymap/sublime.js"></script>
-        <script src="codemirror/mode/markdown/markdown.js"></script>
-        <script src="codemirror/overlay/markOverlay.js"></script>
-        <script src="codemirror/addon/edit/closebrackets.js"></script>
-        <script src="codemirror/addon/edit/continuelist.js"></script>
-        <script src="codemirror/addon/search/searchcursor.js"></script>
-        <script src="codemirror/addon/hint/show-hint.js"></script>
-        <script src="codemirror/addon/hint/anyword-hint.js"></script>
+        <script src="script/codemirror/lib/codemirror.js"></script>
+        <script src="script/codemirror/keymap/sublime.js"></script>
+        <script src="script/codemirror/mode/markdown/markdown.js"></script>
+        <script src="script/codemirror/overlay/markOverlay.js"></script>
+        <script src="script/codemirror/addon/edit/closebrackets.js"></script>
+        <script src="script/codemirror/addon/edit/continuelist.js"></script>
+        <script src="script/codemirror/addon/search/searchcursor.js"></script>
+        <script src="script/codemirror/addon/hint/show-hint.js"></script>
+        <script src="script/codemirror/addon/hint/anyword-hint.js"></script>
     </head>
 
     <body class="theme-dark">
@@ -219,9 +219,9 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
         <script src="script/resources.js"></script>
-        <script src="script/showdown.js"></script>
-        <script src="script/bannerImageExtension.js"></script>
-        <script src="script/internalLinkExtension.js"></script>
+        <script src="script/showdown/lib/showdown.js"></script>
+        <script src="script/showdown/extension/bannerImage.js"></script>
+        <script src="script/showdown/extension/internalLink.js"></script>
         <script src="script/editorTools.js"></script>
         <script src="script/insert.js"></script>
         <script src="script/prompts.js"></script>
@@ -317,7 +317,7 @@
             });
 
             const converter = new showdown.Converter({
-                extensions: ['bannerImage', internalLinkExtension],
+                extensions: [bannerImage, internalLink],
             });
 
             const preview = document.getElementById("preview");
