added pdf support

--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
                     <li><a target='_blank' href='https://codemirror.net/'>Text input field (CodeMirror)</a></li>
                     <li><a target='_blank' href='https://showdownjs.com/'>Markdown processor (Showdown)</a></li>
                     <li><a target='_blank' href='https://www.npmjs.com/package/jszip'>Folder compressor (jszip)</a></li>
+                    <li><a target='_blank' href='https://ekoopmans.github.io/html2pdf.js/'>PDF processor (html2pdf.js)</a></li>
                 </ul>
                 <b>Graphics</b>
                 <ul>
