--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+        <script src="script/html2pdf.bundle.min.js"></script>
         <script src="script/resources.js"></script>
         <script src="script/showdown/lib/showdown.js"></script>
         <script src="script/showdown/extension/bannerImage.js"></script>
