--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ editor: Cohesion
 <center>
 <img src=cohesion/favicon.png>
 
-# Wellcome to Cohesion
+# Welcome to Cohesion
 </center>
 
 Hit the <icon>edit</icon> button to edit this document, or press \`Ctrl\`+\`P\` to toggle between edit and preview mode.
