added more jsdoc

--- a/resources.html
+++ b/resources.html
@@ -174,7 +174,7 @@
                 else if (["txt"].includes(ext)) {
                     return "cohesion/file-icons/text-x-generic.svg";
                 } else {
-                    return "cohesion/file-icons/text-x-generic.svg"; // ícone padrão nyaa~
+                    return "cohesion/file-icons/text-x-generic.svg";
                 }
             }
 
