fixed wrong default setting value

--- a/settings.html
+++ b/settings.html
@@ -368,7 +368,7 @@
                 const txtEditorDate = document.getElementById("editorDate");
                 if (getSetting("editorShowHints", "true") === "true") cbxEditorShowHints.checked = "true";
                 if (getSetting("editorLineNumbers", "false") === "true") cbxEditorLineNumbers.checked = "true";
-                if (getSetting("editorDirection", "rtl") === "rtl") cbxEditorDirection.checked = "true";
+                if (getSetting("editorDirection", "ltr") === "rtl") cbxEditorDirection.checked = "true";
                 if (getSetting("editorWidth", "false") === "true") cbxEditorWidth.checked = "true";
                 txtEditorDate.value = getSetting("dateFormat", "%d/%m/%Y %H:%M");
 
