--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
         <script src="script/showdown/lib/showdown.js"></script>
         <script src="script/showdown/extension/bannerImage.js"></script>
         <script src="script/showdown/extension/internalLink.js"></script>
+        <script src="script/showdown/extension/definition-list.js"></script>
         <script src="script/editorTools.js"></script>
         <script src="script/insert.js"></script>
         <script src="script/prompts.js"></script>
@@ -319,7 +320,7 @@
             });
 
             const converter = new showdown.Converter({
-                extensions: [bannerImage, internalLink],
+                extensions: [bannerImage, internalLink, 'definition-list'],
             });
 
             const preview = document.getElementById("preview");
