--- a/404.html
+++ b/404.html
@@ -45,6 +45,7 @@
 
     span.number {
         color: white;
+        z-index: 9999;
     }
   </style>
 </head>
@@ -52,13 +53,13 @@
   <canvas id="lineCanvas"></canvas>
 
   <div class="main-header">
-    <span id="char1" class="number">4</span>
-    <span id="char2" class="icon" translate="no">computer</span>
-    <span id="char3" class="icon" translate="no">person</span>
+    <span id="char1" class="icon" translate="no">hard_drive</span>
+    <span id="char2" class="icon" translate="no">description</span>
+    <span id="char3" class="number">4</span>
     <span id="char4" class="number">0</span>
-    <span id="char5" class="icon" translate="no">database</span>
-    <span id="char6" class="icon" translate="no">cloud</span>
-    <span id="char7" class="number">4</span>
+    <span id="char5" class="number">4</span>
+    <span id="char6" class="icon" translate="no">draft</span>
+    <span id="char7" class="icon" translate="no">computer</span>
   </div>
 
   <script>
@@ -94,11 +95,25 @@
       return { x, y };
     }
 
+    function getScreenCenter(){
+        const x = window.innerWidth/2;
+        const y = window.innerHeight/2;
+
+        return { x, y };
+    }
+
     function updateCharsCoordinates() {
       chars.forEach(char => {
         const { x, y } = getSafeCoordinates(char);
         char.style.left = x + "px";
         char.style.top = y + "px";
+      });
+    }
+
+    function centerCharsCoordinates() {
+      chars.forEach(char => {
+        char.style.left = getScreenCenter(char).x + "px";
+        char.style.top = getCharCenter(char).y + "px";
       });
     }
 
@@ -141,7 +156,7 @@
     resizeCanvas();
     window.addEventListener("resize", resizeCanvas);
 
-    updateCharsCoordinates();
+    centerCharsCoordinates();
     updateCharsCoordinates();
     setInterval(updateCharsCoordinates, 5000);
 
