--- a/404.html
+++ b/404.html
@@ -11,12 +11,22 @@
         @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded");
         @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
+        * {
+            pointer-events: none;
+        }
+
         body {
             background-color: #282828;
             color: white;
             margin: 0;
             overflow: hidden;
             font-family: "Ubuntu";
+            animation: unblur 2s forwards;
+        }
+
+        @keyframes unblur {
+            from { filter: blur(50px);} 
+            to { filter: blur(0px); }
         }
 
         canvas {
@@ -56,7 +66,7 @@
             color: gray;
             font-weight: bolder;
             background-color: white;
-            box-shadow: 0px 0px 50px white;
+            box-shadow: 0px 0px 50px 10px white;
             z-index: 9999;
         }
     </style>
